Change defaults to be closer to game, tweak readme

--- a/src/BoomerangFoo.csproj
+++ b/src/BoomerangFoo.csproj
@@ -7,7 +7,7 @@
 	  <LangVersion>8.0</LangVersion>
 	  <AssemblyName>BoomerangFoo</AssemblyName>
     <Product>Custom gamemodes, powerups, and settings for Boomerang Fu, a couch PvP game.</Product>
-    <Version>0.2.0</Version>
+    <Version>0.2.1</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
@@ -42,12 +42,13 @@
 		    <MyOutputFiles Include="$(OutputPath)\$(AssemblyName).dll" />
 	    </ItemGroup>
 	    <Copy SourceFiles="@(MyOutputFiles)" DestinationFolder="$(GamePath)\BepInEx\plugins" SkipUnchangedFiles="true" />
+	</Target>
 
+	<Target Name="BuildReleaseZip" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
 		<MakeDir Directories="$(ProjectDir)bin\export\BoomerangFu\BepInEx\plugins" />
 		<Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(ProjectDir)bin\export\BoomerangFu\BepInEx\plugins" />
-		<Exec Command="powershell Compress-Archive -Path $(ProjectDir)bin\export\BoomerangFu\* -DestinationPath $(ProjectDir)bin\export\$(AssemblyName).zip" Condition=" '$(OS)' == 'Windows_NT' "/>
-		<Exec Command="zip -r $(ProjectDir)bin/export/$(AssemblyName).zip $(ProjectDir)bin/export/BoomerangFu" Condition=" '$(OS)' != 'Windows_NT' "/>
-    </Target>
+		<Exec Command="powershell -Command &quot;if (Test-Path '$(ProjectDir)bin\export\$(AssemblyName).zip') { Remove-Item '$(ProjectDir)bin\export\$(AssemblyName).zip' } ; Compress-Archive -Path $(ProjectDir)bin\export\BoomerangFu\* -DestinationPath $(ProjectDir)bin\export\$(AssemblyName).zip&quot;" Condition=" '$(OS)' == 'Windows_NT' " />
+	</Target>
   
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
