--- a/src/BoomerangFoo.csproj
+++ b/src/BoomerangFoo.csproj
@@ -38,6 +38,8 @@
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
+    <PackageReference Include="System.Reflection.Emit" Version="4.7.0" />
+    <PackageReference Include="System.Reflection.Emit.ILGeneration" Version="4.7.0" />
     <PackageReference Include="UnityEngine.Modules" Version="2019.2.21.10310285" IncludeAssets="compile" />
 	<Reference Include="Assembly-CSharp">
 		<HintPath>$(GamePath)\Boomerang Fu_Data\Managed\Assembly-CSharp.dll</HintPath>
