--- a/src/BoomerangFoo.csproj
+++ b/src/BoomerangFoo.csproj
@@ -49,6 +49,9 @@
 	<Reference Include="Assembly-CSharp">
 		<HintPath>$(GamePath)\Boomerang Fu_Data\Managed\Assembly-CSharp.dll</HintPath>
 	</Reference>
+	  <Reference Include="Assembly-CSharp-firstpass">
+		  <HintPath>$(GamePath)\Boomerang Fu_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+	  </Reference>
 	  <Reference Include="Unity.TextMeshPro">
 		  <HintPath>$(GamePath)\Boomerang Fu_Data\Managed\Unity.TextMeshPro.dll</HintPath>
 	  </Reference>
